# StockBackTest

./: .gitignore  indicator.py  main.py  pyproject.toml  sizer.py  strategy.py  test.ipynb
